deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template: # template 변경시에만 pod 재시작
    metadata:
      labels:
        app: spring-app
      annotations:
        configmap.revision: "init"   # ✅ ConfigMap 버전 추적용 어노테이션
    spec:
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config-yaml
      containers:
        - name: spring-app
          volumeMounts:
            - mountPath: /config/
              name: app-config-volume
          image: jcho5078/spring-hello:v4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
