service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  selector:
    app: spring-app
  #ports:
  #  - name: http
  #    port: 80
  #    targetPort: 8080
  #    nodePort: 30007
  #type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
